--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div id="container">
-        <h1>Lista zadań</h1>
+        <h1>ToDo List</h1>
 
-        <input type="text" name="" id="newSentance" placeholder="Wpisz nowe zdanie">
+        <input type="text" name="" id="newSentance" placeholder="Write your new task">
 
         <br>
 
-        <input type="button" id="addNewTask" value="Dodaj zadanie">
+        <input type="button" id="addNewTask" value="Add task">
 
         <ul id="taskList"></ul>
     </div>
